--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -4,9 +4,13 @@ engine: julia
 
 # Current projects
 
-Some projects I'm currently working on:
 
+I'm actively working on:
 
 - a [digital Complutensian polyglot Bible](https://neelsmith.quarto.pub/digitalcomplutensian): digital resources for both experts and novices, supporting aligned multilingual reading 
+
+
+I've done extensive preparatory work for two projects I plan to return to in 2025:
+
 - "[semantic editions](https://neelsmith.quarto.pub/semanticeditions/)": digital editions of texts with significant non-textual material
 - the [Homer Multitext project](https://neelsmith.quarto.pub/hmt/):  a personal site about how I work with the Homer Multitext projet’s digital archive
