--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -8,9 +8,10 @@ engine: julia
 I'm actively working on:
 
 - a [digital Complutensian polyglot Bible](https://neelsmith.quarto.pub/digitalcomplutensian): digital resources for both experts and novices, supporting aligned multilingual reading 
+- the [Homer Multitext project](https://neelsmith.quarto.pub/hmt/):  a personal site about how I work with the Homer Multitext project’s digital archive
 
 
-I've done extensive preparatory work for two projects I plan to return to in 2025:
+I've done extensive preparatory work for a project I plan to return to in 2025:
 
 - "[semantic editions](https://neelsmith.quarto.pub/semanticeditions/)": digital editions of texts with significant non-textual material
-- the [Homer Multitext project](https://neelsmith.quarto.pub/hmt/):  a personal site about how I work with the Homer Multitext projet’s digital archive
+
